Moved some http parts to separate files

--- a/biicode.conf
+++ b/biicode.conf
@@ -1,7 +1,7 @@
 # Biicode configuration file
 
 [requirements]
-    biicode/cmake: 4
+	biicode/cmake: 4
     lasote/libuv (v1.x): 8
     lasote/http_parser: 1
 
@@ -10,6 +10,9 @@
 
 [paths]
     src
+
+[mains]
+    tests/test.cpp
 
 [includes]
     uv.h: lasote/libuv/include
