Code reformat with coroutines. Oups

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
-
 ADD_BII_TARGETS()
 
+include(biicode/boost/setup)
+
+set(Boost_USE_STATIC_LIBS ON)
+
+bii_find_boost(COMPONENTS context system REQUIRED)
+
 TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++11")
+
+target_include_directories(${BII_BLOCK_TARGET} INTERFACE ${Boost_INCLUDE_DIRS})
+target_link_libraries(${BII_BLOCK_TARGET} INTERFACE ${Boost_LIBRARIES})
 
 ###############################################################################
 #      HELP                                                                   #
