--- a/biicode.conf
+++ b/biicode.conf
@@ -1,9 +1,10 @@
 # Biicode configuration file
 
 [requirements]
-	biicode/cmake: 4
-    lasote/libuv (v1.x): 8
-    lasote/http_parser: 1
+	 biicode/boost: 8
+	 biicode/cmake: 4
+	 lasote/http_parser: 1
+	 lasote/libuv(v1.x): 8
 
 [parent]
     aptakhin/enji
